--- a/aboly.html
+++ b/aboly.html
@@ -902,7 +902,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">主</span>：注重，崇尚。<span class="lyexample"><span>【例】</span><span><a href="#3.16" class="lyref">3.16</a> <span class="lyq">射不主皮。</span></span></span>
+<a id="zhu3"></a><span class="lyterm">主</span>：注重，崇尚。<span class="lyexample"><span>【例】</span><span><a href="#3.16" class="lyref">3.16</a> <span class="lyq">射不主皮。</span></span></span>
 </p>
 </li>
 <li>
@@ -5366,7 +5366,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">雅言</span>：官话，相当于现代汉语的普通话，与方言、土话相对。当时各国以西周国都<a href="#zhouchao">镐京</a>一带的发音和用词为标准，孔子平时自然是说鲁国方言。<span class="lyterm">雅</span>：正统的，合乎标准规范的。文雅高尚是其后起义。<span class="lyexample"><span>【例】</span><span>《尔雅》是中国最古老的词典，尔通<a href="#er3">迩</a>，尔雅就是近于普通话。它分类解释了4300多个古代词语，相传是<a href="#zhougong">周公</a>所著，现代一般认为成于<a href="#zhouchao">战国</a>末至西汉初。</span></span><span class="lyseealso"><span>【参】</span><span>清代刘台拱《论语骈枝》：<span class="lyq">《<a href="#shijing">诗</a>》之有风、雅也亦然。王都之音最正，故以&ldquo;雅&rdquo;名。列国之音不尽正，故以&ldquo;风&rdquo;名。&hellip;&hellip;正于王朝，达于诸侯之国，是为雅言。</span>又可比较 <a href="#9.1" class="lyref">9.1</a> <span class="lyq">子罕言</span>，<a href="#7.21" class="lyref">7.21</a> <span class="lyq">子不语</span>。</span></span>
+<a id="yayan"></a><span class="lyterm">雅言</span>：官话，相当于现代汉语的普通话，与方言、土话相对。当时各国以西周国都<a href="#zhouchao">镐京</a>一带的发音和用词为标准，孔子平时自然是说鲁国方言。<span class="lyterm">雅</span>：正统的，合乎标准规范的。文雅高尚是其后起义。<span class="lyexample"><span>【例】</span><span>《尔雅》是中国最古老的词典，尔通<a href="#er3">迩</a>，尔雅就是近于普通话。它分类解释了4300多个古代词语，相传是<a href="#zhougong">周公</a>所著，现代一般认为成于<a href="#zhouchao">战国</a>末至西汉初。</span></span><span class="lyseealso"><span>【参】</span><span>清代刘台拱《论语骈枝》：<span class="lyq">《<a href="#shijing">诗</a>》之有风、雅也亦然。王都之音最正，故以&ldquo;雅&rdquo;名。列国之音不尽正，故以&ldquo;风&rdquo;名。&hellip;&hellip;正于王朝，达于诸侯之国，是为雅言。</span>又可比较 <a href="#9.1" class="lyref">9.1</a> <span class="lyq">子罕言</span>，<a href="#7.21" class="lyref">7.21</a> <span class="lyq">子不语</span>。</span></span>
 </p>
 </li>
 <li>
@@ -6198,11 +6198,11 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">乱也</span>：意即这是乱的苗头，要出乱子了。</p>
+<span class="lyterm">乱也</span>：指这是乱的苗头，要出乱子了。</p>
 </li>
 <li>
 <p>
-<span class="lyterm">已甚</span>：太过分。<span class="lyexample"><span>【例】</span><span>成语&ldquo;不为已甚&rdquo;指做事不应太过分，要适可而止。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#11.16" class="lyref">11.16</a> </span></span>
+<span class="lyterm">已甚</span>：太过分。<span class="lyexample"><span>【例】</span><span>成语&ldquo;不为已甚&rdquo;指做事不应太过分，要适可而止。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#11.16" class="lyref">11.16</a> <a href="#15.27" class="lyref">15.27</a> 。《四书集注》：<span class="lyq">二者之心善恶虽殊，然其生乱则一也。</span></span></span>
 </p>
 </li>
 </ul>
@@ -6220,7 +6220,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">使</span>：连词，假如，假使。<span class="lyexample"><span>【例】</span><span>《吴越春秋&middot;夫差内传》：<span class="lyq">使死者有知，吾羞前君地下，不忍睹忠臣伍子胥及公孙圣；使其无知，吾负于生。</span></span></span><span class="lyseealso"><span>【参】</span><span>《韩诗外传》第2卷第17章：<span class="lyq">君子有主善之心，而无胜人之色；德足以君天下，而无骄肆之容；行足以及后世，而不以一言非人之不善。</span>（主：注重。）</span></span>
+<span class="lyterm">使</span>：连词，假如，假使。<span class="lyexample"><span>【例】</span><span>《吴越春秋&middot;夫差内传》：<span class="lyq">使死者有知，吾羞前君地下，不忍睹忠臣伍子胥及公孙圣；使其无知，吾负于生。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#18.10" class="lyref">18.10</a> <a href="#zhuofatubu">所引</a>《史记》，是周公捉发吐哺谦恭下士的例子。《韩诗外传》第2卷第17章：<span class="lyq">君子有<a href="#zhu3">主</a>善之心，而无胜人之色；德足以君天下，而无骄肆之容；行足以及后世，而不以一言非人之不善。</span>《北史&middot;贾思伯传》载，贾思伯官至都官尚书（相当于后世的刑部尚书），又为北魏孝明帝的《春秋》师傅，可他<span class="lyq">性谦和，倾身礼士，虽在街途，停车下马，接<a href="#you4">诱</a><a href="#xunxun">恂恂</a>，<a href="#zeng1">曾</a>无倦色。客有谓曰：&ldquo;公今贵重，宁能不骄？&rdquo;思伯曰：&ldquo;衰至便骄，何常之有！&rdquo;当世以为雅言。</span>（宁（<span class="lypinyin">n&igrave;ng</span>）：何，怎。<a href="#yayan">雅言</a>：正理，确论。）</span></span>
 </p>
 </li>
 </ul>
@@ -6809,7 +6809,7 @@ img.characterimg {
 <span class="lyterm">循循</span>：有顺序有条理的样子。<a id="xun2"></a><span class="lyterm">循</span>：沿着，顺着。<span class="lyexample"><span>【例】</span><span>成语&ldquo;循序渐进&rdquo;。</span></span>
 </p>
 <p>
-<span class="lyterm">诱</span>：诱导，以巧妙有吸引力的方式引导。成语&ldquo;循循善诱&rdquo;指老师善于引导学生有效学习。</p>
+<a id="you4"></a><span class="lyterm">诱</span>：诱导，以巧妙有吸引力的方式引导。成语&ldquo;循循善诱&rdquo;指老师善于引导学生有效学习。</p>
 </li>
 <li>
 <p>
@@ -7318,7 +7318,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">恂恂</span>（<span class="lypinyin">x&uacute;n</span>）：谦恭谨慎的样子。<span class="lyterm">恂</span>：本义为诚信。<span class="lyexample"><span>【例】</span><span>《汉书&middot;李广传》：<span class="lyq">李将军恂恂如<a href="#bifu">鄙人</a>，口不能出辞，及死之日，天下知与不知，皆为流涕，彼其中心诚信于士大夫也。</span></span></span>
+<a id="xunxun"></a><span class="lyterm">恂恂</span>（<span class="lypinyin">x&uacute;n</span>）：谦恭谨慎的样子。<span class="lyterm">恂</span>：本义为诚信。<span class="lyexample"><span>【例】</span><span>《汉书&middot;李广传》：<span class="lyq">李将军恂恂如<a href="#bifu">鄙人</a>，口不能出辞，及死之日，天下知与不知，皆为流涕，彼其中心诚信于士大夫也。</span></span></span>
 </p>
 </li>
 <li>
@@ -13503,6 +13503,7 @@ img.characterimg {
 <li>
 <p>
 <a id="lugong"></a><span class="lyterm">鲁公</span>（？&mdash;前998年）：<a href="#zhougong">周公旦</a>的长子伯禽，鲁国首任国君，在位46年，勤政好礼。</p>
+<a id="zhuofatubu"></a>
 <div class="lyseealso">
 <p>
 <span>【参】</span><span>《史记&middot;鲁周公世家》载，伯禽代替周公就封于鲁，临行前周公告诫他：<span class="lyq">&ldquo;我，文王之子，武王之弟，成王之叔父，我于天下亦不贱矣。然我一沐三捉发，一饭三吐哺，起以待士，犹恐失天下之贤人。子之鲁，慎无以国骄人！&rdquo;</span>（捉发：提起还没洗好的头发。吐哺：吐出来不及咽下的食物。这都是急于接纳贤人的表现。）</span>
