--- a/aboly.html
+++ b/aboly.html
@@ -1780,7 +1780,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="yi3a"></a>第一个<span class="lyterm">以</span>是表示并列的连词，而，又。<span class="lyexample"><span>【例】</span><span><a href="#12.20" class="lyref">12.20</a> <span class="lyq">质直而好义，察言而观色，虑以下人。</span>屈原《离骚》：<span class="lyq">长太息以掩涕兮，哀民生之多艰。</span>（太息：深深叹息。）</span></span>
+<a id="yi3a"></a>第一个<span class="lyterm">以</span>是表示并列的连词，而，又。<span class="lyexample"><span>【例】</span><span><a href="#12.20" class="lyref">12.20</a> <span class="lyq">质直而好义，察言而观色，虑以下人。</span>屈原《离骚》：<span class="lyq">长太息以掩涕兮，哀民生之多艰。</span>（<a id="taixi"></a>太息：深深叹息。）</span></span>
 </p>
 </li>
 <li>
@@ -2013,7 +2013,7 @@ img.characterimg {
 <a id="sanhuan"></a><span class="lyterm">三家</span>：指当时把持鲁国政权的三大权贵家族，<a href="#jishi">季孙氏</a>、<a href="#mengshi">孟孙氏</a>、叔孙氏，他们都是鲁国第15任国君鲁桓公（前711年&mdash;前694年在位）的后代，又称<span class="lykeyword">三桓</span>。桓公的嫡长子为鲁庄公；庶长子庆父的后代为孟孙氏，庶次子叔牙的后代为叔孙氏，<a id="jiyou"></a>嫡次子季友的后代为季孙氏。季孙氏就是季氏，&ldquo;孙&rdquo;不是氏的一部分，仅用于尊称各家宗主，例如<a href="#shusunwushu">叔孙武叔</a>和<a href="#jiziran">季子然</a>的区别。<a id="bozhongshuji"></a><span class="lyseealso"><span>【参】</span><span>古代兄弟姐妹之间的排行，按<span class="lykeyword">伯</span>（或<span class="lykeyword">孟</span>）<span class="lykeyword">仲叔季</span>为序。《左传&middot;隐公元年》孔颖达正义：<span class="lyq">《礼纬》云：&ldquo;庶长称孟&rdquo;，然则嫡妻之子长者称伯，妾子长于妻子，则称为孟，所以别<a href="#zongzhu">嫡庶</a>也。</span></span></span>
 </p>
 <p>鲁庄公临终时，庆父与叔牙勾结企图<a href="#cuan4">篡</a>位为君，被季友力阻，叔牙被赐自尽。贼心不死的庆父在随后3年内连续杀害了2任鲁君：公子般（前662年，在任不足2月）与鲁闵公（前660年），史称<span class="lykeyword">庆父之难</span>。季友再次力挽狂澜，除掉庆父，<a id="luxigong"></a>立鲁僖公（前659年&mdash;前627年在位），此后担任正卿16年，季孙氏也壮大成为鲁国第一望族。</p>
-<p>鲁国自第20任的<a href="#xuangong">宣公</a>起，实权一直受三桓把持（其间3年由季氏家臣<a href="#yanghuo">阳货</a>控制），直到第29任的穆公（前415年&mdash;前377年在位）继位后才恢复<a href="#gongshi">公室</a>权威，叔孙氏、孟孙氏流亡到齐国，季孙氏据其封邑<a href="#feiyi">费邑</a>独立为费国。</p>
+<p>鲁国自第20任的<a href="#xuangong">宣公</a>起，实权一直受三桓把持（其间3年由季氏家臣<a href="#yanghuo">阳货</a>控制），直到第29任的穆公（前415年&mdash;前377年在位）才恢复<a href="#gongshi">公室</a>权威，叔孙氏、孟孙氏流亡到齐国，季孙氏据其封邑<a href="#feiyi">费邑</a>独立为费国。</p>
 <p>
 <a id="sifengongshi"></a><span class="lyseealso"><span>【参】</span><span>早在孔子成年以前，三桓已经三分、四分公室，形成对鲁政的垄断。《左传&middot;襄公十一年》（前562年）：<span class="lyq">正月，作<a href="#sanjun">三军</a>，三分公室而〔三桓〕各有其一。<a href="#sanzi">三子</a>各毁其乘。</span>（公室：指鲁国国家<a href="#bingyi">军队</a>，包括相关的<a href="#jingtianzhi">赋税</a>。毁其乘：指撤销私家部队，并入自己统领的一军。）<a id="sifenggongshi"></a>《左传&middot;昭公五年》（前537年）：<span class="lyq">五年春，王正月，舍中军，<a href="#bei1">卑</a>公室也。</span>（王正月：<a href="#lifa">周历</a>正月。）《左传&middot;昭公五年》孔颖达正义：<span class="lyq">襄十一年初作三军，十二分其国民，三家得七，公得五。国民不尽属公，公室已是卑矣。今舍中军，四分公室，三家自取其税，减己税以贡于公，国民不复属于公，公室<a href="#mi2">弥</a>益卑矣。是&ldquo;舍中军&rdquo;者，三家所以卑弱公室也。作中军，卑公室之渐；舍中军，卑公室之极。</span>（三分：三军中，季孙全取一军，叔孙取半军，孟孙取1/4军，其余归公室。四分：三军减为两军，季孙全取一军，叔孙、孟孙各取半军，再合拨经费以养公室。）</span></span>
 </p>
@@ -5327,7 +5327,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">浮云</span>随风飘荡，含有转瞬即逝、不可靠、不值得、不屑为等意味，可以自行体会。<a id="dongmenhuangquan"></a><span class="lyseealso"><span>【参】</span><span>孔子眼中的浮云，世人却趋之若鹜。如《史记&middot;李斯列传》载，李斯从荀子学帝王之术，学成辞行时说：<span class="lyq">诟莫大于卑贱，而悲莫甚于穷困。久处卑贱之位、困苦之地，非世而恶利，自托于无为，此非<a href="#shi4c">士</a>之情也。故斯将西说秦王矣。</span>（诟（<span class="lypinyin">g&ograve;u</span>）：耻。）通过二十余年苦心经营，终于辅佐秦始皇一统天下。位极人臣之际，他也曾<a href="#kui4">喟然</a>而叹：<span class="lyq">物极则衰，吾未知所税驾也！</span>（税：通&ldquo;脱&rdquo;。税驾：（自比老马）解下车套，即休息。）政治斗争多么残酷，他出于嫉妒害死了同学韩非，结果自己也被赵高陷以谋反之名，腰斩灭族。临死之前，他<span class="lyq">顾谓其中子曰：&ldquo;吾欲与若复牵黄犬俱出上蔡东门逐狡兔，岂可得乎！&rdquo;遂父子相哭。</span>（上蔡：李斯的故乡，战国时为楚国一县，在今河南省上蔡县。）</span></span>
+<span class="lyterm">浮云</span>随风飘荡，含有转瞬即逝、不可靠、不值得、不屑为等意味，可以自行体会。<a id="dongmenhuangquan"></a><span class="lyseealso"><span>【参】</span><span>孔子眼中的浮云，世人却趋之若鹜。如《史记&middot;李斯列传》载，李斯从荀子学帝王之术，学成辞行时说：<span class="lyq">诟莫大于卑贱，而悲莫甚于穷困。久处卑贱之位、困苦之地，非世而恶利，自托于无为，此非<a href="#shi4c">士</a>之情也。故斯将西说秦王矣。</span>（诟（<span class="lypinyin">g&ograve;u</span>）：耻。）通过二十余年苦心经营，终于辅佐秦始皇一统天下。位极人臣之际，他也曾<a href="#kui4">喟然</a>而叹：<span class="lyq">物极则衰，吾未知所税驾也！</span>（税：通&ldquo;脱&rdquo;。税驾：（自比老马）解下车套，即休息。）政治斗争多么残酷，他出于嫉妒害死了同学韩非，又由于恐惧<a href="#ershiwangqin">害死</a>了扶苏、蒙恬，结果自己也被赵高陷以谋反之名，腰斩灭族。临死之前，他<span class="lyq">顾谓其中子曰：&ldquo;吾欲与若复牵黄犬俱出上蔡东门逐狡兔，岂可得乎！&rdquo;遂父子相哭。</span>（上蔡：李斯的故乡，战国时为楚国一县，在今河南省上蔡县。）</span></span>
 </p>
 </li>
 </ul>
@@ -6395,7 +6395,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">成功</span>：成就功业。<span class="lyterm">功</span>：《说文解字》解释为<span class="lyq">以劳定国</span>，也就是开疆辟土、强国利民之类的实业。它和文化制度领域的<span class="lyterm"><a href="#wenzhang">文章</a></span>，是考量政治成就的两大指标，又称<span class="lykeyword">文治武功</span>。</p>
+<span class="lyterm">成功</span>：成就功业。<span class="lyterm">功</span>：字形是出力工作，引申为取得的成效，特指<span class="lyq">以劳定国</span>（《说文解字》），也就是开疆辟土、富国利民之类的实业。它和文化制度领域的<span class="lyterm"><a href="#wenzhang">文章</a></span>，是考量政治成就的两大指标，又称<span class="lykeyword">文治武功</span>。</p>
 </li>
 <li>
 <p>
@@ -9496,7 +9496,7 @@ img.characterimg {
 <li>
 <p>
 <a id="zhengming"></a><span class="lyterm">正名</span>：端正名分，使名实相符，实指<a href="#junchenfuzi">君臣父子</a>的正统关系。</p>
-<p>汉代尊儒，教化中强调名分地位的意义，&ldquo;以名为教&rdquo;，<a href="#14.26">不出其位</a>，用以维护等级秩序，从魏晋起被称作<span class="lykeyword">名教</span>。超越本分之举称为<span class="lykeyword"><a href="#jian4a">僭</a></span>，<a id="cuan4"></a>臣夺君位称为<span class="lykeyword">篡</span>（<span class="lypinyin">cu&agrave;n</span>），名实不符之物称为<span class="lykeyword">伪</span>，假托上命称为<span class="lykeyword">矫</span>，都是很忌讳的。</p>
+<p>汉代尊儒，教化中强调名分地位的意义，&ldquo;以名为教&rdquo;，<a href="#14.26">不出其位</a>，用以维护等级秩序，从魏晋起被称作<span class="lykeyword">名教</span>。<a id="jiancuanweijiao"></a>超越本分之举称为<span class="lykeyword"><a href="#jian4a">僭</a></span>，<a id="cuan4"></a>臣夺君位称为<span class="lykeyword">篡</span>（<span class="lypinyin">cu&agrave;n</span>），名实不符之物称为<span class="lykeyword">伪</span>，假托上命称为<span class="lykeyword">矫</span>，都是很忌讳的。</p>
 <div class="lyseealso">
 <p>
 <span>【参】</span><span>《日知录&middot;卷十三&middot;名教》：<span class="lyq">《南史》有云：&ldquo;汉世士务修身，故忠孝成俗；至于乘轩服冕，非此莫由。晋、宋以来，风衰义缺。&rdquo;故昔人之言曰名教，曰名节，曰功名，不能使天下之人以义为利，而犹使之以名为利；虽非纯<a href="#wangdao">王</a>之风，<a href="#yi4d">亦</a>可以救积洿之俗矣。&hellip;&hellip;故名胜于利，则小人之道消；利胜于名，则贪暴之风扇。&hellip;&hellip;人不爱名，则圣人之<a href="#quan2">权</a>去矣。</span>（轩：大夫及以上所乘的车。乘轩服<a href="#mian3">冕</a>：指做大官，飞黄腾达。洿：通&ldquo;污&rdquo;。扇（<span class="lypinyin">shān</span>）：兴。）</span>
@@ -12885,17 +12885,23 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm"><a href="#bifu">鄙夫</a></span>：指庸俗浅陋的人。</p>
+<span class="lyterm"><a href="#bifu">鄙夫</a></span>：庸俗浅陋的人。&ldquo;鄙&rdquo;的具体所指见下一句。</p>
 </li>
 <li>
 <p>
-<span class="lyterm">患得之</span>：指担心得不到。</p>
+<span class="lyterm">患得<a href="#shizhizhe">之</a></span>：担心得不到。成语&ldquo;患得患失&rdquo;指人斤斤计较于个人得失，而不以大局为重。</p>
 </li>
 <li>
 <p>
-<span class="lyterm">无所不至</span>：没有什么干不上来的。成语&ldquo;患得患失&rdquo;指人斤斤计较个人得失。</p>
+<span class="lyterm">无所不至</span>：没有什么干不上来的。</p>
 </li>
 </ul>
+<div class="lyseealso">
+<p>
+<span>【参】</span><span>苏轼对于本章的学习体会，见《上皇帝书》：<span class="lyq">臣始读此书，疑其太过，以为鄙夫之患失，不过备位而苟容。及观李斯忧蒙恬之夺其权，则立二世以亡秦；卢杞忧怀光之数其恶，则误德宗以再乱。其心本生于患失，而其祸乃至于丧邦。孔子之言，良不为过！是以知为国者，平居必有忘躯犯颜之士，则临难<a href="#shu4a">庶几</a>有徇义<a href="#shou3">守死</a>之臣。苟平居尚不能一言，则临难何以责其死节？人臣苟皆如此，天下亦<a href="#dai4">殆</a>哉！</span></span>
+</p>
+<p>（<a id="ershiwangqin"></a>李斯事：《史记&middot;李斯列传》载，前210年秦始皇病故，近臣赵高以<span class="lyq">未尝见秦免罢丞相功臣有封及二世者也，卒皆以诛亡</span>为由胁迫丞相<a href="#dongmenhuangquan">李斯</a>改立新君。李斯始而不从，继而<span class="lyq">仰天长叹，垂泪<a href="#taixi">太息</a></span>，合谋<a href="#jiancuanweijiao">矫</a>诏赐死了刚毅武勇的皇长子扶苏和名将蒙恬，立才能浅薄的幼子胡亥为秦二世，3年后秦朝覆亡。卢杞事：《新唐书&middot;卢杞传》载，783年10月爆发泾原兵变，唐德宗从都城长安出奔，被困于奉天（今陕西省咸阳市乾县）月余，朔方节度使李怀光千里赴难，勇解城下之围。怀光曾斥宰相卢杞之徒奸佞误国，<span class="lyq">宜诛之以谢天下</span>，杞惧，使德宗令怀光乘胜扫平叛党，不必入城面君。怀光<span class="lyq">内怏怏无所发，遂谋反，因暴言杞等罪恶</span>，德宗再逃至汉中，战乱又延续了大半年才得平息。徇：通&ldquo;殉&rdquo;。）</p>
+</div>
 </div>
 </div>
 <a id="17.16"></a>
@@ -13967,7 +13973,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">得其情</span>：指查知案情真相，可以判罪了。<span class="lyterm">情</span>：实情。<span class="lyexample"><span>【例】</span><span>《史记&middot;高祖本纪》：<span class="lyq">列侯诸将无敢隐朕，皆言其情：吾所以有天下者何？项氏之所以失天下者何？</span></span></span><span class="lyseealso"><span>【参】</span><span>安徒生童话《海蟒》中，一条小鱼在深海遇上了庞大可怕的鲸鱼，只有哀求：<span class="lyq">请不要把我吞下去，我连味儿都没有，因为我是这样小，但是我觉得活着是多么愉快啊！</span>（<span class="lyqe">Don't swallow me, I am not even a taste, I am so little, and it is a great pleasure to me to be alive!</span>）（叶君健中译，W. A. Craigie与J. K. Craigie英译。）</span></span>
+<span class="lyterm">得其情</span>：指查知案情真相，可以判罪了。<span class="lyterm">情</span>：实情。<span class="lyexample"><span>【例】</span><span>《史记&middot;高祖本纪》：<span class="lyq">列侯诸将无敢隐朕，皆言其情：吾所以有天下者何？项氏之所以失天下者何？</span></span></span><span class="lyseealso"><span>【参】</span><span>民生多艰，就像安徒生童话《海蟒》中，一条小鱼在深海遇上了可怕的巨鲸，只有哀求：<span class="lyq">请不要把我吞下去，我连味儿都没有，因为我是这样小，但是我觉得活着是多么愉快啊！</span>（<span class="lyqe">Don't swallow me, I am not even a taste, I am so little, and it is a great pleasure to me to be alive!</span>）（叶君健中译，W. A. Craigie与J. K. Craigie英译。）</span></span>
 </p>
 </li>
 </ul>
