--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 layout: default
 ---
 
+<script>
+/*! Image Map Resizer (imageMapResizer.min.js ) - v0.6.2 - 2016-06-16
+ *  Desc: Resize HTML imageMap to scaled image.
+ *  Copyright: (c) 2016 David J. Bradshaw - dave@bradshaw.net
+ *  License: MIT
+ */
+!function(){"use strict";function a(){function a(){function a(a){function c(a){return a*b[1===(d=1-d)?"width":"height"]}var d=0;return a.split(",").map(Number).map(c).map(Math.floor).join(",")}for(var b={width:l.width/m.width,height:l.height/m.height},c=0;j>c;c++)i[c].coords=a(k[c])}function c(){var b=null,c=null;m.onload=function(){b=l.width,c=l.height,(b!==m.width||c!==m.height)&&a()},l.onload=function(){null!==b&&l.width!==b&&a()},m.src=l.src}function d(){function c(){clearTimeout(n),n=setTimeout(a,250)}b(l,"load",a),b(window,"resize",c),b(window,"focus",a),b(window,"readystatechange",a),b(document,"fullscreenchange",a)}function e(a){return a.coords.replace(/ *, */g,",").replace(/ +/g,",")}function f(){return"function"==typeof h._resize}function g(){h._resize=a,i=h.getElementsByTagName("area"),j=i.length,k=Array.prototype.map.call(i,e),l=document.querySelector('img[usemap="#'+h.name+'"]'),m=new Image}var h=this,i=null,j=null,k=null,l=null,m=null,n=null;f()?h._resize():(g(),d(),c())}function b(a,b,c){"addEventListener"in window?a.addEventListener(b,c,!1):"attachEvent"in window&&a.attachEvent("on"+b,c)}function c(){function b(b){if(!b.tagName)throw new TypeError("Object is not a valid DOM element");if("MAP"!==b.tagName.toUpperCase())throw new TypeError("Expected <MAP> tag, found <"+b.tagName+">.");a.call(b)}return function(a){switch(typeof a){case"undefined":case"string":Array.prototype.forEach.call(document.querySelectorAll(a||"map"),b);break;case"object":b(a);break;default:throw new TypeError("Unexpected data type ("+typeof a+").")}}}"function"==typeof define&&define.amd?define([],c):"object"==typeof exports?module.exports=c():window.imageMapResize=c(),"jQuery"in window&&(jQuery.fn.imageMapResize=function(){return this.filter("map").each(a).end()})}(),function(){Array.prototype.map||(Array.prototype.map=function(a){"use strict";if(void 0===this||null===this||"function"!=typeof a)throw new TypeError;for(var b=Object(this),c=b.length>>>0,d=new Array(c),e=arguments.length>=2?arguments[1]:void 0,f=0;c>f;f++)f in b&&(d[f]=a.call(e,b[f],f,b));return d}),Array.prototype.forEach||(Array.prototype.forEach=function(a){"use strict";if(void 0===this||null===this||"function"!=typeof a)throw new TypeError;for(var b=Object(this),c=b.length>>>0,d=arguments.length>=2?arguments[1]:void 0,e=0;c>e;e++)e in b&&a.call(d,b[e],e,b)})}();
+
+window.onload = function() {
+    imageMapResize("#abolycovermap");
+}
+</script>
+
 <div class="home">
 
 <div style="overflow: auto; width: 100%; margin-bottom: 1.5em;">
-<a href="/aboly" title="《一瓶论语》"><img src="/img/abolycover.png" alt="《一瓶论语》" width="48%" style="display: block; float: left"/></a>
+<a href="/aboly" title="《一瓶论语》"><img src="/img/abolycover.png" usemap="#abolycovermap" alt="《一瓶论语》" width="48%" style="display: block; float: left"/></a>
 <a href="/ly" title="《论语》白文版"><img src="/img/lycover.png" alt="《论语》白文版" width="48%" style="display: block; float: right"/></a>
 </div>
 
@@ -34,3 +47,30 @@ PDF版下载：<a href="https://github.com/abolybook/aboly/releases" target="_bl
 <p class="rss-subscribe" style="text-align: right"><a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS订阅</a></p>
 
 </div>
+
+<map name="abolycovermap" id="abolycovermap">
+<area shape="circle" coords="308,451,22" href="aboly.html#topiczheng4" alt="政" title="政">
+<area shape="circle" coords="365,451,18" href="aboly.html#topiczhong1" alt="忠" title="忠">
+<area shape="circle" coords="164,504,18" href="aboly.html#topiczhi4a" alt="智" title="智">
+<area shape="circle" coords="361,351,18" href="aboly.html#topicshu4" alt="恕" title="恕">
+<area shape="circle" coords="187,451,22" href="aboly.html#topicxue2" alt="学" title="学">
+<area shape="circle" coords="247,390,39" href="aboly.html#topicjunzi" alt="君子" title="君子">
+<area shape="circle" coords="308,329,22" href="aboly.html#topicli3" alt="礼" title="礼">
+<area shape="circle" coords="348,491,18" href="aboly.html#topicyongren" alt="贤" title="贤">
+<area shape="circle" coords="185,329,22" href="aboly.html#topicren2" alt="仁" title="仁">
+<area shape="circle" coords="330,276,18" href="aboly.html#topicqian1" alt="谦" title="谦">
+<area shape="circle" coords="145,369,18" href="aboly.html#topiczhi4" alt="志" title="志">
+<area shape="circle" coords="133,472,18" href="aboly.html#topicyi4a" alt="艺" title="艺">
+<area shape="circle" coords="348,410,18" href="aboly.html#topicde2" alt="德" title="德">
+<area shape="circle" coords="308,508,18" href="aboly.html#topichui4" alt="惠" title="惠">
+<area shape="circle" coords="186,272,18" href="aboly.html#topicyi4" alt="义" title="义">
+<area shape="circle" coords="128,329,18" href="aboly.html#topicyou3" alt="友" title="友">
+<area shape="circle" coords="227,288,18" href="aboly.html#topicxiao4" alt="孝" title="孝">
+<area shape="circle" coords="267,491,18" href="aboly.html#topiclian2" alt="廉" title="廉">
+<area shape="circle" coords="286,276,18" href="aboly.html#topicjing4" alt="敬" title="敬">
+<area shape="circle" coords="133,429,18" href="aboly.html#topicwen2" alt="文" title="文">
+<area shape="circle" coords="145,288,18" href="aboly.html#topicxin4" alt="信" title="信">
+<area shape="circle" coords="208,504,18" href="aboly.html#topicheng2" alt="恒" title="恒">
+<area shape="circle" coords="360,307,18" href="aboly.html#topicwen1" alt="温" title="温">
+<area shape="default" href="aboly.html" alt="《一瓶论语》" title="《一瓶论语》">
+</map>
