Minor changes, mainly to usage.

--- a/aboly.html
+++ b/aboly.html
@@ -522,7 +522,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">朋</span>：师出同门为朋，志趣相投为友，这里泛指朋友，志同道合的人。&ldquo;朋&rdquo;仅在本章单独出现过，后面都是&ldquo;友&rdquo;或&ldquo;朋友&rdquo;连用。<span class="lyseealso"><span>【参】</span><span><a href="#12.24" class="lyref">12.24</a> 。《礼记&middot;学记》：<span class="lyq">独学而无友，则孤陋而寡闻。</span>欧阳修《朋党论》：<span class="lyq">所守者道义，所行者忠信，所惜者名节。以之修身，则同道而相益；以之事国，则同心而共济。终始如一，此君子之朋也。</span></span></span>
+<span class="lyterm">朋</span>：师出同门为朋，志趣相投为友，这里泛指朋友，志同道合的人。&ldquo;朋&rdquo;仅在本章单独出现过，后面都是&ldquo;友&rdquo;或&ldquo;朋友&rdquo;连用。<span class="lyseealso"><span>【参】</span><span>《礼记&middot;学记》：<span class="lyq">独学而无友，则孤陋而寡闻。</span>欧阳修《朋党论》：<span class="lyq">所守者道义，所行者忠信，所惜者名节。以之修身，则同道而相益；以之事国，则同心而共济。终始如一，此君子之朋也。</span></span></span>
 </p>
 <p>&ldquo;说&rdquo;的本字为兑，其甲骨文字形像人咧嘴而笑，可以理解为源于自身的高兴。<span class="lyterm">乐</span>引申自音乐带给人的愉快，可以理解为外部相感的共鸣之乐，就如《<a href="#yijing">周易</a>&middot;乾》中孔子说的<span class="lyq">同声相应，同气相求</span>。</p>
 </li>
@@ -2538,7 +2538,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="yin2"></a><span class="lyterm">淫</span>：过度，无节制。<span class="lyexample"><span>【例】</span><span>范仲淹《岳阳楼记》：<span class="lyq">淫雨霏霏，连月不开。</span></span></span>
+<a id="yin2"></a><span class="lyterm">淫</span>：过度，无节制，本义为雨水不停。<span class="lyexample"><span>【例】</span><span>范仲淹《岳阳楼记》：<span class="lyq">淫雨霏霏，连月不开。</span></span></span>
 </p>
 <p>
 <span class="lyterm">伤</span>：损害，指过分哀愁以至有害。</p>
@@ -7180,7 +7180,7 @@ img.characterimg {
 </li>
 </ul>
 <p>
-<span class="lyseealso"><span>【参】</span><span>本章肯定了独立人格的尊严。即使是小人物，<span class="lyq">富贵不能淫，贫贱不能移，威武不能屈，此之谓大丈夫</span>（《孟子&middot;滕文公下》）。据汪东林《1949年后的梁漱溟》记载，1974年初兴起的&ldquo;批林批孔&rdquo;运动中，哲学家梁漱溟（1893&mdash;1988）拒绝随大流，反对全盘否定孔子，反对<span class="lyq">把学术研究和政治问题搅在一起</span>，并在学习会上发表长篇讲话，认为孔子是中国历史上影响最大的古人，引起轩然大波，遭到半年多的集中批判。被追问挨批感想时，<span class="lyq">他始而不答，最后却脱口而出：&ldquo;三军可夺帅也，匹夫不可夺<a href="#zhi4g">志</a>！&rdquo;</span>要求他解释，回答说：<span class="lyq">我认为，孔子本身<a href="#7.21">不是宗教</a>，也<a href="#6.17">不要人信仰他</a>，他只是要人<a href="#7.28">相信自己的理性</a>。我只是相信自己的理性，而不轻易去相信别的什么。别的人可能对我有启发，但也还<a href="#12.1">只是启发</a>我的理性。归根结底，我还是按我的理性而言而动。因为一定要我说话，再三问我，我才说了&ldquo;三军可夺帅也，匹夫不可夺志&rdquo;的老话。吐露出来，是受压力的人说的话，不是在得势的人说的话。&ldquo;匹夫&rdquo;就是独人一个，无权无势。他的最后一着只是坚信他自己的&ldquo;志&rdquo;，什么都可以夺掉他，但就是这个&ldquo;志&rdquo;没法夺掉，就是把他这个人消灭掉，也无法夺掉！</span></span></span>
+<span class="lyseealso"><span>【参】</span><span>本章肯定了独立人格的尊严。即使是小人物，<span class="lyq">富贵不能淫，贫贱不能移，威武不能屈，此之谓大丈夫</span>。（《孟子&middot;滕文公下》。<a href="#yin2">淫</a>：侵犯，相当于 <a href="#12.6" class="lyref">12.6</a>  的&ldquo;浸润&rdquo;。）据汪东林《1949年后的梁漱溟》记载，1974年初兴起的&ldquo;批林批孔&rdquo;运动中，哲学家梁漱溟（1893&mdash;1988）拒绝随大流，反对全盘否定孔子，反对<span class="lyq">把学术研究和政治问题搅在一起</span>。他又在学习会上发表长篇讲话，认为孔子是中国历史上影响最大的古人，引起轩然大波，遭到半年多的集中批判。被追问挨批感想时，<span class="lyq">他始而不答，最后却脱口而出：&ldquo;三军可夺帅也，匹夫不可夺<a href="#zhi4g">志</a>！&rdquo;</span>要求他解释，回答说：<span class="lyq">我认为，孔子本身<a href="#7.21">不是宗教</a>，也<a href="#6.17">不要人信仰他</a>，他只是要人<a href="#7.28">相信自己的理性</a>。我只是相信自己的理性，而不轻易去相信别的什么。别的人可能对我有启发，但也还<a href="#12.1">只是启发</a>我的理性。归根结底，我还是按我的理性而言而动。因为一定要我说话，再三问我，我才说了&ldquo;三军可夺帅也，匹夫不可夺志&rdquo;的老话。吐露出来，是受压力的人说的话，不是在得势的人说的话。&ldquo;匹夫&rdquo;就是独人一个，无权无势。他的最后一着只是坚信他自己的&ldquo;志&rdquo;，什么都可以夺掉他，但就是这个&ldquo;志&rdquo;没法夺掉，就是把他这个人消灭掉，也无法夺掉！</span></span></span>
 </p>
 </div>
 </div>
@@ -7206,13 +7206,13 @@ img.characterimg {
 <p>
 <a id="buzhibuqiu"></a><span class="lyterm">不忮（<span class="lypinyin">zh&igrave;</span>）不求，何用不臧（<span class="lypinyin">zāng</span>）？</span>：这是《诗经&middot;邶（<span class="lypinyin">b&egrave;i</span>）风&middot;雄雉》的结尾句，意思是：不忌害别人又没有非分的贪求，（这样的人）做什么事会不是善事呢？也可理解为，做什么事不会顺顺当当呢？原诗是写一位妇女思念远行未归的丈夫。<span class="lyseealso"><span>【参】</span><span>《诗集传》：<span class="lyq">忧其远行之犯患，冀其善处而得全也。</span></span></span>
 </p>
+<p>
+<span class="lyterm">忮</span>：因妒忌而生害人之心。<span class="lyterm">臧</span>：善，好。</p>
 </li>
 <li>
 <p>
-<span class="lyterm">诵</span>：抑扬顿挫地高声读或背。<span class="lyseealso"><span>【参】</span><span>《汉书&middot;艺文志》：<span class="lyq">《<a href="#shangshu">书</a>》曰：&ldquo;诗言志，歌<a href="#yong3">咏</a>言。&rdquo;故哀乐之心感，而歌咏之声发；诵其言谓之诗，咏其声谓之歌。</span>（所引见《尚书&middot;虞夏书&middot;舜典》。）</span></span>
+<span class="lyterm">诵</span>：抑扬顿挫地高声读或背。<span class="lyseealso"><span>【参】</span><span>《汉书&middot;艺文志》：<span class="lyq">《<a href="#shangshu">书</a>》曰：&ldquo;诗言志，歌<a href="#yong3">咏</a>言。&rdquo;故哀乐之心感，而歌咏之声发；诵其言谓之诗，咏其声谓之歌。</span>（所引出自《尚书&middot;虞夏书&middot;舜典》。）</span></span>
 </p>
-<p>
-<span class="lyterm">忮</span>：因妒忌而生害人之心。<span class="lyterm">臧</span>：善，好。</p>
 </li>
 <li>
 <p>
@@ -12885,7 +12885,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm"><a href="#bifu">鄙夫</a></span>：庸俗浅陋的人。&ldquo;鄙&rdquo;的具体所指见下一句。</p>
+<span class="lyterm"><a href="#bifu">鄙夫</a></span>：庸俗浅陋的人。&ldquo;鄙&rdquo;的具体所指见后两句。</p>
 </li>
 <li>
 <p>
@@ -14716,7 +14716,7 @@ img.characterimg {
 <p>可是过犹不及，补充材料太多，会有明显的不平衡感，也影响对原文的专注。<strong>建议始终把理解原文放在首位</strong>，额外的内容不妨选读。</p>
 <p>注解中还包含一些语法方面的内容。中国古代强调熟读成诵、文义自达，不太重视形式化规则，汉语语法是清末开始受西方影响才逐渐建立的。语法很实用，但汉语（包括古汉语）自有其特点，比如往往一个字就是一个词，词性又灵活多变，名词、动词、形容词、副词等等左右逢源，不像英语那样有明确的对错之分。所以，既要善用语法的分析能力，也应该知道，目前的语法体系还未能完善地概括汉语的特征。</p>
 <p>本书采用了很多超链接，这是电子版的一大优势，可以更好地形成概念网络。比如，有时单解释一个词感觉不够到位，还会链接到它更基本的含义。要有效使用本书，先要熟悉跳来跳去的操作，在跳之前要留意当前位置，浏览器也应该有后退、前进的功能。使用的超链接主要有3种样式：圆角小框跳转到某章开头，例如 <a href="#1.1" class="lyref">1.1</a> ；<a href="#junzi">这样</a>的跳转到本书内的某个位置；<a href="http://www.abolybook.org/" class="lyurl" target="_blank">这样</a>的打开外部网址链接。</p>
-<p>自古以来，《论语》的注解可谓千锤百炼，但我有时仍对旧注无法满意，思来想去，还是按自己的理解写了出来，记为&ldquo;与各家不同&rdquo;。在这方面，我很不喜欢标新立异，只是觉得自己的想法确实好一些，恳请读者指正。显然，这些解释未必是我第一个想到的，只是没有精力穷举相关的材料。它们有的与旧注差别很大，有的只是细节上的不同，共计8处：<a href="#1.13" class="lyref">1.13</a> <a href="#3.4" class="lyref">3.4</a> <a href="#3.23" class="lyref">3.23</a> <a href="#8.3" class="lyref">8.3</a> <a href="#8.9" class="lyref">8.9</a> <a href="#12.1" class="lyref">12.1</a> <a href="#17.1" class="lyref">17.1</a> <a href="#17.16" class="lyref">17.16</a> 。</p>
+<p>自古以来，《论语》的注解可谓千锤百炼，但我有时仍对旧注无法满意，思来想去，还是按自己的理解写了出来，记为&ldquo;与各家不同&rdquo;。在这方面，我很不喜欢标新立异，只是觉得自己的想法确实好一些，恳请读者指正。当然，这些解释未必是我第一个想到的，只是没有精力穷举相关的材料。它们有的与旧注差别很大，有的只是细节不同，共计8处：<a href="#1.13" class="lyref">1.13</a> <a href="#3.4" class="lyref">3.4</a> <a href="#3.23" class="lyref">3.23</a> <a href="#8.3" class="lyref">8.3</a> <a href="#8.9" class="lyref">8.9</a> <a href="#12.1" class="lyref">12.1</a> <a href="#17.1" class="lyref">17.1</a> <a href="#17.16" class="lyref">17.16</a> 。</p>
 <p>译评之外的部分，还包括<a href="#characters">人物表</a>、<a href="#topics">主题索引</a>以及<a href="#references">参考材料</a>。人物表把《论语》中的孔子弟子与常见人物（包括各种称呼）集中起来撰写小传，辅以超链接，就很容易熟悉各人的面貌。主题索引是从基本概念的角度梳理的《论语》纲要。另外还打算添加一个导言，用另一种方式把离散的水滴串成有机的整体，这是后续的一个重点内容。</p>
 <p>本书不含脚注。脚注总让我把视线从正文移开，指望看到些好东西，往往却很失望，还得努力续上中断的思维。脚注只有恼人的数字，而超链接有文本作指示，是可以预期的。我的选择是，把通常作为脚注的话，写成<a href="#sourcecode">源代码</a>里的注释，用&ldquo;NOTE&rdquo;标出。它们是对正文的补充说明，但还不值得出现在书面上。如果对正文的说法有疑惑，可以先看看注释里有没有解释。用&ldquo;TODO&rdquo;标出的，是我随时记下的想法，表示后续撰写的方向。</p>
 <a id="usage-format"></a>
@@ -14724,45 +14724,36 @@ img.characterimg {
 <p>
 <a id="sourcecode"></a>本书用LaTeX撰写，经过简单的Python处理，编译成PDF电子书，可以从<a href="https://github.com/abolybook/aboly/releases/latest" class="lyurl" target="_blank">GitHub</a>或<a href="http://pan.baidu.com/s/1eRp6vMq#path=%252Faboly" class="lyurl" target="_blank">百度网盘</a>下载。Web版的生成，先用<a href="http://www.antlr.org/" class="lyurl" target="_blank">ANTLR</a>从LaTeX转换为XML，再用XSLT导出HTML。如果你是Windows XP用户，建议安装<a href="http://www.firefox.com.cn" class="lyurl" target="_blank">Firefox</a>等支持Web标准较好的浏览器阅读。</p>
 <p>
-<a id="projectinfo"></a>本书基于&ldquo;知识共享&rdquo;协议<a href="http://creativecommons.org/licenses/by-nc-nd/3.0/cn/" class="lyurl" target="_blank">CC BY-NC-ND 3.0</a>，以开放源代码的形式发布在GitHub上：<a href="https://github.com/abolybook/aboly" class="lyurladdr" target="_blank">github.com/abolybook/aboly</a>，欢迎通过<a href="https://github.com/abolybook/aboly/issues" class="lyurl" target="_blank">Issues</a>、<a href="https://github.com/abolybook/aboly/pulls" class="lyurl" target="_blank">Pull Requests</a>提出问题和建议。</p>
+<a id="projectinfo"></a>本书基于&ldquo;知识共享&rdquo;协议<a href="http://creativecommons.org/licenses/by-nc-nd/3.0/cn/" class="lyurl" target="_blank">CC BY-NC-ND 3.0</a>，以开放源代码的形式发布在GitHub上：<a href="https://github.com/abolybook/aboly" class="lyurladdr" target="_blank">github.com/abolybook/aboly</a>，欢迎提出问题和建议。</p>
 <p>其它联系方式：</p>
 <ul>
 <li>
-<p> 本书网站的反馈页面，可以自由发表感想，参与讨论：<a href="http://www.abolybook.org/ideas" class="lyurladdr" target="_blank">www.abolybook.org/ideas</a>。网站还比较简陋，但已经积累了一些有意思的想法，请让我把它慢慢做好。</p>
+<p> 本书网站的反馈页面，可以自由发表感想，参与讨论：<a href="http://www.abolybook.org/ideas" class="lyurladdr" target="_blank">www.abolybook.org/ideas</a>。</p>
 </li>
 <li>
-<p> 电子邮件：<a href="mailto:abolybook@gmail.com" class="lyurladdr" target="_blank">abolybook@gmail.com</a>。内容较多或者不希望公开的想法，可以通过邮件告诉我。</p>
+<p> 内容较多或者不希望公开的想法，可以通过邮件告诉我：<a href="mailto:abolybook@gmail.com" class="lyurladdr" target="_blank">abolybook@gmail.com</a>。</p>
 </li>
 </ul>
 <a id="usage-plan"></a>
 <h2>计划中</h2>
-<p>本书是用业余时间断续撰写的，有很多明显可以改进的地方。下面列出来的，我会逐一改进，未知的问题，就需要大家的智慧与帮助。谢谢！</p>
-<ol>
+<p>本书是用业余时间断续撰写的，有很多明显可以改进的地方。下面列出来的，我会细水长流地改进，未知的问题，就需要大家的智慧与帮助。谢谢！</p>
+<ul>
 <li>
-<p> 各章之间的联系比较散乱，需要重新梳理。</p>
+<p> 各章之间的联系比较散乱，需要仔细梳理。主题索引也应该更有条理。补充参考材料中没来及写的点评。</p>
 </li>
 <li>
-<p> 主题索引也应该更有条理。</p>
+<p> 持续改进&ldquo;评&rdquo;的部分。</p>
 </li>
 <li>
-<p> 补充参考材料中没来及写的点评。这3条属于0.4版之前的任务。</p>
+<p> 正文前面缺少一篇提纲挈领的导言，很快就会开始撰写。我对它的期望很高，考虑的内容也不少，希望不会篇幅太长。</p>
 </li>
 <li>
-<p> &ldquo;评&rdquo;的部分明显偏弱，对它的补强是0.5版之前的任务。</p>
+<p> 配上适当的插图，代码中已经标出了若干处。我很羡慕画画好的人，封面的设计很大程度上是藏拙的办法。这个只能慢慢来。</p>
 </li>
 <li>
-<p> 正文前面缺少一篇提纲挈领的导言，很快就会开始撰写。我对它的期望很高，考虑的内容也不少，希望不会篇幅太长。相对容易写的前面2/3，是0.6版之前的任务。比较难写的后面1/3，是0.7版之前的任务。</p>
+<p> Web版、app版，会有它们单独的计划。</p>
 </li>
-<li>
-<p> 适当配上直观的插图，代码中已经标出了若干处。我很羡慕画画好的人，封面的设计很大程度上是藏拙的办法。这个只能慢慢来。</p>
-</li>
-<li>
-<p> 多看点书，包括国外著作，细水长流地提高总体质量。但要控制篇幅。</p>
-</li>
-<li>
-<p> Web版会有它单独的计划。</p>
-</li>
-</ol>
+</ul>
 <p class="lycenterpar">敬请期待！</p>
 <a id="references"></a>
 <h1>参考材料</h1>
