Minor changes to image map.

--- a/aboly.html
+++ b/aboly.html
@@ -14704,7 +14704,7 @@ img.characterimg {
 <p>内容上，&ldquo;一瓶&rdquo;可以当成&ldquo;译评&rdquo;的谐音，本书的注解大致分成译和评两种性质。</p>
 <p>说&ldquo;译&rdquo;并不准确，它没有像很多现代注本那样，把原文全部翻译出来。我一直觉得，无论读文言文还是外语，只要不是刚入门或者碰到非常难的结构，大段的翻译就很碍眼：它占据了太多的篇幅，分散了对原文的关注，客观上削弱了直接阅读原文的能力，平庸的译文还让人很快失掉兴趣。与其把精力花在推敲译文上，不如把注释做得扎实一些，读者自然就能贯通文意。</p>
 <p>《一瓶论语》的译，主要是对字词、结构的解释，也就是注。成句的翻译属于少数，有时是为了补足句子成分，有时是疏通容易误解的结构，有时只想表达得灵活一些，建议你自己多试试，看会不会译得更好。</p>
-<p>《一瓶论语》的评，主要是对一句话或者一整章内容的感受：它在孔子当时是不是合理？放在现代有什么意义？这个部分直接反映了我的偏好与局限，所以取舍比较谨慎，以免喧宾夺主，干扰你的独立思考。</p>
+<p>《一瓶论语》的评，主要是对一句话或者一整章内容的感受：它在孔子当时是不是合理？放在现代有什么意义？这个部分直接反映了我的偏好与局限，所以选择比较谨慎，以免喧宾夺主，干扰你的独立思考。</p>
 <a id="usage-structure"></a>
 <h2>体例</h2>
 <p>
@@ -14745,7 +14745,7 @@ img.characterimg {
 <p> 持续改进&ldquo;评&rdquo;的部分。</p>
 </li>
 <li>
-<p> 正文前面缺少一篇提纲挈领的导言，很快就会开始撰写。我对它的期望很高，考虑的内容也不少，希望不会篇幅太长。</p>
+<p> 正文之前会增加一篇导言，介绍孔子的生平和影响，不少章的历史背景就有了着落。我对它的期望很高，希望不会篇幅太长。</p>
 </li>
 <li>
 <p> 配上适当的插图，代码中已经标出了若干处。我很羡慕画画好的人，封面的设计很大程度上是藏拙的办法。这个只能慢慢来。</p>
